# chain-replication

./: .dockerignore  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  build.rs  prometheus-local.yml
.github/: dependabot.yml
benchit/: Cargo.toml  main.rs
benchit/src/: main.rs
chain-replication/: Cargo.toml
chain-replication/src/: communication.rs  configuration.rs  lib.rs  replication.rs  storage.rs  test_infrastructure.rs
cli/: Cargo.toml  main.rs
cli/src/: main.rs
client/: Cargo.toml  append.rs  lib.rs  msgs.rs  proto.rs  reply.rs
client/protocol/: manage.rs  manage_grpc.rs  mod.rs  storage.rs  storage_grpc.rs
client/src/: append.rs  client_futures.rs  lib.rs
config/: head.toml  management.toml  middle.toml  tail.toml
log-server/: asynclog.rs  config.rs  frontend_server.rs  internal_server.rs  main.rs  messages.rs  metrics.rs  net.rs  proto.rs  protocol.rs  replication.rs  service.rs  tail_reply.rs  tcp.rs
log-server/asynclog/: batched_mpsc.rs  mod.rs  queue.rs
log-server/replication/: mod.rs  replica.rs  server.rs
log-server/server/: frontend.rs  mod.rs  net.rs  protocol.rs  replication.rs
log-server/server/replication/: mod.rs  proto.rs
management-server/: Cargo.toml  chain.rs  config.rs  failure_detector.rs  handle.rs  main.rs
management-server/protocol/: manage.rs  manage_grpc.rs  mod.rs  storage.rs  storage_grpc.rs
management-server/src/: chain.rs  handle.rs  main.rs
proto/: Cargo.toml  build.rs  manage.proto  storage.proto
proto/src/: lib.rs  manage_grpc.rs  storage.rs
replica/: main.rs
src/: asynclog.rs  log.rs  main.rs  protocol.rs  reporter.rs  service.rs
storage-server/: Cargo.toml  admin_server.rs  asynclog.rs  config.rs  macros.rs  main.rs  message_batch.rs  messages.rs  retry.rs  server.rs  tail_reply.rs
storage-server/asynclog/: batch.rs  bufpool.rs  messages.rs  mod.rs  sync.rs
storage-server/configuration/: mod.rs
storage-server/protocol/: manage.rs  manage_grpc.rs  mod.rs  storage.rs  storage_grpc.rs
storage-server/replication/: client.rs  controller.rs  io.rs  log_reader.rs  mod.rs  poll.rs  protocol.rs
storage-server/src/: admin_server.rs  macros.rs  main.rs
storage-server/src/asynclog/: batch.rs  messages.rs
storage-server/src/replication/: client.rs  controller.rs  log_reader.rs  poll.rs  protocol.rs
