[package]
authors = ["Zack Owens <zowens2009@gmail.com>"]
name = "log-server"
version = "0.1.0"
[[bin]]
name = "storage-server"
path = "storage-server/main.rs"

[[bin]]
name = "benchit"
path = "benchit/main.rs"

[[bin]]
name = "cli"
path = "cli/main.rs"

[[bin]]
name = "management-server"
path = "management-server/main.rs"

[build-dependencies]
protoc-grpcio = "1.0.1"
protobuf-codegen = "2.5"

[dependencies]
byteorder = "1.0.0"
bytes = "0.4"
either = "1.5.3"
env_logger = "0.8"
fnv = "1.0.6"
futures = "0.1"
getopts = "0.2"
grpcio = "0.4.1"
histogram = "0.6.3"
http = "0.1"
hyper = "0.12"
lazy_static = "1.0"
libc = "0.2.65"
net2 = "0.2.26"
nix = "0.14"
num_cpus = "1.0"
pool = "0.1.4"
protobuf = { version = "~2.7", features = ["with-bytes"] }
rand = { version = "0.7", features = ["small_rng"] }
serde = "1.0.0"
serde_derive = "1.0.0"
slab = "0.4.0"
tokio = "0.1.6"
tokio-io = "0.1.6"
tokio-signal = "0.2.7"
tokio-sync = "0.1"
toml = "0.5"
tokio-codec = "0.1.0"
commitlog = { git = "https://github.com/zowens/commitlog.git" }

[dependencies.log]
features = ["release_max_level_info"]
version = "0.4"

[dependencies.prometheus]
default-features = false
features = ["nightly"]
git = "https://github.com/pingcap/rust-prometheus.git"
optional = false

[lib]
name = "client"
path = "client/lib.rs"

[profile.bench]
debug = true

[profile.release]
debug = true
opt-level = 3
lto = true
# overflow-checks = false
