[package]
authors = ["Zack Owens <zowens2009@gmail.com>"]
name = "log-server-client"
version = "0.1.0"
edition = "2018"

[lib]
name = "log_server_client"
path = "src/lib.rs"

[dependencies]
bytes = "1"
log-server-protocol = { path = "../proto" }
tokio = { version = "1.19", features = ["rt", "time", "rt-multi-thread", "io-std", "io-util", "macros", "signal", "net", "sync"] }
grpcio = "0.10"
protobuf = { version = "2.27.1", features = ["with-bytes"] }
serde = "1.0.0"
serde_derive = "1.0.0"
env_logger = "0.9"
toml = "0.5"
futures = "0.3"
fnv = "1.0.6"
pin-project = "1"
rand = { version = "0.8", features = ["small_rng"] }

[dependencies.log]
features = ["release_max_level_info"]
version = "0.4"
